# pbf

./: .gitignore  Cargo.toml  LICENSE.md  README.md  bun.lockb  package.json  tsconfig.eslint.json  tsconfig.json  typedoc.json
.github/ISSUE_TEMPLATE/: 2-bug-report.md  3-feature-request.md
.github/workflows/: coveralls.yml  test.yml
rust/: Cargo.toml  lib.rs
rust-core/: Cargo.toml  bit_cast.rs  lib.rs
rust-derive/: Cargo.toml  bitcast.rs  lib.rs  read.rs  write.rs
rust-derive/tests/: mod.rs
src/: bit_cast.rs  index.ts  lib.rs
tests/: index.test.ts
