[package]
name = "pbf"
version = "0.1.5"
edition = "2021"
authors = ["Craig O'Connor <oconnorct1@gmail.com>"]
description = "Mininmal protobuffer module; Build your own glue."
documentation = "https://docs.rs/pbf"
homepage = "https://github.com/OpenS2/pbf"
repository = "https://github.com/OpenS2/pbf"
readme = "README.md"
categories = ["encoding", "wasm", "embedded", "no-std"]
keywords = ["pbf", "protobuffers", "minimal", "low-cost-code"]
license = "MIT"

[lib]
name = "pbf"
bench = true

# Include only specific files and directories
include = ["src/**", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
# tarpaulin = "*"

[features]
default = ["std"]
std = []

[profile.bench]
opt-level = 3
