[package]
name = "pbf"
version = "0.2.1"
edition = "2021"
authors = ["Craig O'Connor <oconnorct1@gmail.com>"]
description = "Mininmal protobuffer module; Build your own glue."
documentation = "https://docs.rs/pbf"
homepage = "https://github.com/OpenS2/pbf"
repository = "https://github.com/OpenS2/pbf"
readme = "README.md"
categories = ["encoding", "wasm", "embedded", "no-std"]
keywords = ["pbf", "protobuffers", "minimal", "low-cost-code"]
license = "MIT"
# Include only specific files and directories
include = ["src/**", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE"]

[lib]
name = "pbf"
bench = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
# tarpaulin = "*"

[profile.bench]
opt-level = 3
