[package]
name = "pbf"
version = "1.0.0"
edition = "2021"
authors = ["Craig O'Connor <oconnorct1@gmail.com>"]
description = "Mininmal protobuffer module; Build your own glue."
documentation = "https://docs.rs/pbf"
homepage = "https://github.com/OpenS2/pbf"
repository = "https://github.com/OpenS2/pbf"
readme = "README.md"
categories = ["encoding", "wasm", "embedded", "no-std"]
keywords = ["pbf", "protobuffers", "minimal", "low-cost-code"]
license = "MIT"
# Include only specific files and directories
# include = ["rust/**", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE"]
exclude = [
    "/assets",
    "/coverage",
    "/benchmarks",
    "/dist",
    "/node_modules",
    "/target",
    "/docs",
    "/tests",
    "/tools",
    "/src",
]

[lib]
name = "pbf"
path = "rust/lib.rs"
bench = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
# tarpaulin = "*"

[profile.bench]
opt-level = 3
