[package]
name = "pbf-core"
version = "1.1.0"
edition = "2021"
authors = ["Craig O'Connor <oconnorct1@gmail.com>"]
description = "This library supports the S2JSON 1.0 Specification"
documentation = "https://docs.rs/pbf-core"
homepage = "https://github.com/OpenS2/pbf"
repository = "https://github.com/OpenS2/pbf"
readme = "../README.md"
categories = ["encoding", "wasm", "embedded", "no-std"]
keywords = ["open", "vector", "tile", "gis", "low-cost-code"]
license = "MIT"

[lib]
name = "pbf_core"
path = "lib.rs"
bench = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]

[profile.bench]
opt-level = 3
