[package]
name = "pbf-core"
publish = true
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
name = "pbf_core"
path = "lib.rs"
bench = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]

[profile.bench]
opt-level = 3
