[package]
name = "pbf-derive"
version = "1.1.0"
edition = "2024"
authors = ["Craig O'Connor <oconnorct1@gmail.com>"]
description = "This library supports the S2JSON 1.0 Specification"
documentation = "https://docs.rs/pbf-derive"
homepage = "https://github.com/OpenS2/pbf"
repository = "https://github.com/OpenS2/pbf"
readme = "../README.md"
categories = ["encoding", "wasm", "embedded", "no-std"]
keywords = ["open", "vector", "tile", "gis", "low-cost-code"]
license = "MIT"

[dependencies]
pbf-core = { path = "../rust-core", version = "1" }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["derive"] }
proc-macro-crate = "3.3"
darling = "0.20"

[dev-dependencies]

[lib]
proc-macro = true
name = "pbf_derive"
path = "lib.rs"
bench = true
